nivasa-macros/tests/trybuild/graphql_invalid_target.rs
use nivasa_macros::resolver;

trait GraphqlGateway {
    #[resolver("users")]
    fn users(&self);
}

fn main() {}
